--- a/assets/style.css
+++ b/assets/style.css
@@ -104,7 +104,7 @@ fieldset ul {
     border-radius: 1rem;
     margin-left: 1.5rem;
     width: 60%;
-    overflow: visible;
+    /* overflow: auto; */
 }
 
 /* skills li tag animation effect -> source: https://codepen.io/martinwolf/pen/eNNdme/  */
@@ -112,6 +112,7 @@ fieldset ul {
 .cool-link {
     color: #000;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .cool-link::after {
