--- a/assets/style.css
+++ b/assets/style.css
@@ -178,8 +178,8 @@ footer span {
         padding-top: 10px;
     }
 
-    /* slides in effect on the page header - only in desktop and tablet view */
-    @keyframes slideInFromLeft {
+    /* slides in effect on the page header and footer - only in desktop and tablet view */
+    @keyframes slideInFromTop {
         0% {
           transform: translateY(-100%);
         }
@@ -188,7 +188,33 @@ footer span {
         }
     }
 
-    nav {
-        animation: 1s ease-out 0s 1 slideInFromLeft;
+    @keyframes slideInFromLeft {
+        0% {
+          transform: translateX(-100%);
+        }
+        100% {
+          transform: translateX(0);
+        }
+    }
+
+    @keyframes slideInFromRight {
+        0% {
+            transform: translateX(100%);
+        }
+        100% {
+            transform: translateX(0%);
+        }
+    }
+
+    .slide-top {
+        animation: 1s ease-out 0s 1 slideInFromTop;
+    }
+
+    .slide-right {
+        animation: 0.7s ease-out 0s 1 slideInFromLeft;
+    }
+
+    .slide-left {
+        animation: 0.5s ease-out 0s 1 slideInFromRight;
     }
 }
