--- a/assets/style.css
+++ b/assets/style.css
@@ -26,7 +26,7 @@ main {
 
 /* the whole content in the main tag */
 .main-content {
-    margin-top: 10px;
+    margin: 1rem 1rem 0 1rem;
 }
 
 i, a, a:focus, a:hover {
