fixed window-mode class style

--- a/assets/style.css
+++ b/assets/style.css
@@ -196,7 +196,7 @@ footer i {
     border-radius: 5px;
     padding: 1rem;
     margin: 1rem;
-    text-align: center;
+    text-align: left;
 }
 
 .window-mode a {
